src/assets/styles/cmps/_app-hero.scss
.hero-container {
    position: relative;
    height: 680px;

    .hero-background {
        width: 100%;
        position: absolute;
        height: 100%;
        top: -80px;
        display: flex;
        justify-content: flex-start;
        background-color: $clr10;
        // z-index: -100; //added by Aharon
        transition: 2s;

        // @include for-hero-layout-2 {
        //     background-color: unset;
        // }

        @include for-hero-layout-3 {
            justify-content: flex-end;
        }

        .hero {
            width: 100%;
            height: 100%;
            // background-image: url('https://fiverr-res.cloudinary.com/image/upload/q_auto,f_auto/v1/attachments/generic_asset/asset/bb5958e41c91bb37f4afe2a318b71599-1599344049983/bg-hero-1-1792-x1.png');
            // background-image: url('../../img/bg-hero-1.jpg');
            background-position: 50% 100%;
            background-repeat: no-repeat;
            display: contents;
            transition: 2s;

            @include for-hero-layout-2 {
                display: block;
            }

            // position: absolute; //removed by Aharon
            // background-image: url('../../img/bg-hero-1.jpg');
            // margin-inline-end: 100px;
        }
    }

    .hero-header {
        display: flex;
        flex-direction: column;
        margin-block-start: 220px; //added by Aharon
        align-items: flex-start;
        padding-inline-start: 32px;
        // align-content: center; // removed by Aharon
        // padding-bottom: 24px;
        // position: absolute;
        // inset-block-start: 30vh;
        // width: 600px;

        // margin-block-start: 220px;
        @include for-hero-layout-3 {
            // max-width: 1400px;
            // margin: auto;
        }

        .hero-title {
            // width: 400px;
            max-width: 700px;
            width: 100%;
            font-size: rem(40px);
            line-height: 55px; // must calculate with lh function
            font-weight: 700;
            color: $clr7;
            font-family: 'Macan-bold';

            @include for-hero-layout-1 {
                // font-size: rem(48px);
                // width: 700px;
            }

            @include for-hero-layout-2 {
                // font-size: rem(48px);
                // width: 600px;
            }

            @include for-hero-layout-3 {
                max-width: 600px;
            }

            i {
                font-family: domain-display-italic;
                font-weight: 500;
            }
        }
    }
}

